Correct display of map in Maps View on tablet displays.

--- a/app/assets/stylesheets/maps.scss
+++ b/app/assets/stylesheets/maps.scss
@@ -63,7 +63,7 @@
 ******************************************/
 
 /* Extra Small devices (mobiles, 320px and up) */
-@media (min-width: 320px) and (max-width: 767px) {
+@media (min-width: 320px) and (max-width: 767px) and (orientation: portrait) {
 
   .story-maps-properties{
     height: 480px;
@@ -75,11 +75,52 @@
 
 }
 
+@media (min-width: 320px) and (max-width: 767px) and (orientation: landscape) {
+
+  .story-maps-properties{
+    height: 290px;
+  }
+
+  .story-google-maps{
+    height: 285px;
+  }
+
+}
+
 /* Small devices (tablets, 768px and up) */
-@media (min-width: 768px) and (max-width: 991px) {}
+@media (min-width: 768px) and (max-width: 991px) and (orientation: portrait) {
+
+  .story-maps-properties{
+    height: 950px;
+  }
+
+  .story-google-maps{
+    height: 945px;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 991px) and (orientation: landscape) {
+
+  .story-maps-properties{
+    height: 560px;
+  }
+
+  .story-google-maps{
+    height: 555px;
+  }
+}
 
 /* Medium devices (desktops, 992px and up) */
-@media (min-width: 992px) and (max-width: 1199px) {}
+@media (min-width: 992px) and (max-width: 1199px) {
+
+  .story-maps-properties{
+    height: 730px;
+  }
+
+  .story-google-maps{
+    height: 725px;
+  }
+}
 
 /* Large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) and (max-width: 1920px) {}
